# confound_insight

./: .env.example  README.md  docker-compose.yml  pyproject.toml
api/analysis/: models.py
api/compounds/: fingerprint.py  models.py  pubchem.py  services.py
api/config/: celery.py  settings.py
api/products/: mfds.py  models.py
docs/: 01_logic.md  02_UI_design.md  03_Use_case.md
